# 250708-c-wzq

./: CMakeLists.txt  README.md  manage.py  sdl3_migrator.py  sdl3_test.c
include/: pch.h
sdl2_backup/: sdl3_test.c
sdl2_backup/include/: ai.h  game.h  gui.h
sdl2_backup/src/: ai.cpp  game.cpp  gui.cpp
src/: ai.cpp  gui.cpp  main.cpp
tests/: test_ai_gtest.cpp  test_game_gtest.cpp  test_gui_gtest.cpp
